--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div  data-aos="flip-left"
                 data-aos-easing="ease-out-cubic"
                 data-aos-duration="2000" class="aboutimage">
-                    <img class="img1" src="./images/vecteezy_stainless-spider-logo_26419524.png" alt="">
+                    <img class="img1" src="https://www.codosphere.com/images/technology/MERN.png" alt="">
 
                 </div>
                 <div class="aboutcontent">
@@ -89,7 +89,7 @@
                 <h2 class="mainhead">Skills</h2>
                 <span class="subhead">My Skills</span></div>
                 <div class="skillcontent">
-                    <div class="skillimage"><img class="myskill" src="./images/Johnny_Depp_Illustration-removebg-preview.png" alt="skill"></div>
+                    <div class="skillimage"><img class="myskill" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR08B0hG9QtBgQl6UBbefLXyI8_uLLKm5FsFg&s" alt="skill"></div>
                     <div class="progressbar">
                         <!-- html bar -->
                         <div class="skill">
@@ -134,27 +134,27 @@
                 </div>
 
                 <div class="icon">
-                    <a href="" target="_blank"> <i class="fa-solid fa-user brands" ></i></a>
+                    <a href="" target="_blank"> <i class="fa-brands fa-github brands" ></i></a>
                     </div>
                     <div class="icon">
-                        <a href="" target="_blank"> <i class="fa-solid fa-user brands" ></i></i></a>
+                        <a href="" target="_blank"> <i class="fa-brands fa-youtube brands" ></i></i></a>
                 </div>
                 <div class="icon">
-                    <a href="" target="_blank"><i class="fa-brands fa-linkedin-in brands"></i></a>
+                    <a href="" target="_blank"><i class="fa-brands fa-twitter brands"></i></a>
                 </div>
                 <div class="icon">
-                    <a href="" target="_blank"><i class="fa-brands fa-linkedin-in brands"></i></a>
+                    <a href="" target="_blank"><i class="fa-brands fa-instagram brands"></i></a>
                 </div>
                 <div class="icon">
-                    <a href="" target="_blank"><i class="fa-brands fa-linkedin-in brands"></i></a>
+                    <a href="" target="_blank"><i class="fa-brands fa-facebook brands"></i></a>
                 </div>
             </div>
         </section>
         <!-- footer -->
          <footer>
-            <p id="copyright"> &copy; My Pprtfolio website - July </p>
+            <p id="copyright"> &copy; My Portfolio website - July 2024 </p>
          <div class="icon upArrow">
-            <a href="#container"><i class="fa-brands fa-linkedin-in brands"></i></a>
+            <a href="#container"><i class="fa-solid fa-angle-up brands"></i></a>
          </div>
         </footer>
     </div>
